tests/spec/build/snapshots/package_named_after_go_builtin_is_sanitized.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import user_panic "github.com/user/myproject/panic"

func main() {
	user_panic.Helper()
	panic("boom")
}


// === panic/panic.go ===
package panic_

func Helper() int {
	return 0
}
