tests/spec/build/snapshots/prelude_alias_coexists_with_private_lisette_function.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import lisette "github.com/ivov/lisette/prelude"

func lisette_() int {
	return 1
}

func main() {
	x := lisette.MakeOptionSome(1)
	_ = x
	lisette_()
}
