tests/spec/build/snapshots/receiver_name_collision_with_parameter.snap
---
source: tests/spec/build/mod.rs
---
// === builder/mod.go ===
package builder

type StringBuilder struct {
	Content string
}

func (ss StringBuilder) Append(s string) StringBuilder {
	return StringBuilder{Content: ss.Content + s}
}


// === main.go ===
package main

import "github.com/user/myproject/builder"

func main() {
	sb := builder.StringBuilder{Content: "hello"}
	sb2 := sb.Append(" world")
	_ = sb2
}
