tests/spec/build/snapshots/same_module_cross_file_method_casing.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "github.com/user/myproject/shapes"

func main() {
	_ = shapes.Test_local_static()
}


// === shapes/types.go ===
package shapes

import "fmt"

type Point struct {
	X float64
	Y float64
}

func (p Point) GoString() string {
	return fmt.Sprintf("Point { x: %v, y: %v }", p.X, p.Y)
}

func Point_New(x, y float64) Point {
	return Point{
		X: x,
		Y: y,
	}
}

type Builder struct {
	X float64
	Y float64
}

func (b Builder) GoString() string {
	return fmt.Sprintf("Builder { x: %v, y: %v }", b.X, b.Y)
}

func Builder_New() Builder {
	return Builder{
		X: 0.0,
		Y: 0.0,
	}
}

func (b Builder) With_x(x float64) Builder {
	return Builder{
		X: x,
		Y: b.Y,
	}
}


// === shapes/use_types.go ===
package shapes

func Test_local_static() float64 {
	p := Point_New(1.0, 2.0)
	b := Builder_New().With_x(5.0)
	return p.X + b.X
}
