tests/spec/build/snapshots/same_module_pub_const_use_matches_definition.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

const MaxRetries int = 3

const MaxTimeout int = 60

func main() {
	_ = MaxRetries
	_ = MaxTimeout
}
