tests/spec/build/snapshots/same_module_pub_interface_method_call.snap
---
source: tests/spec/build/mod.rs
---
// === main.go ===
package main

import "fmt"

type Shape interface {
	Area() int
}

func main() {
	fmt.Println("test")
}
